--- a/src/components/QuestionBox.css
+++ b/src/components/QuestionBox.css
@@ -15,19 +15,16 @@ body{
 }
 .navbar button{
     height: 30px;
-    width: 50px;
-    font-size: 1.5rem;
+    width: 120px;
 }
 .navbar button:hover{
     background-color: aqua;
 }
-.light{
-    border-top-left-radius:10px ;
-    border-bottom-left-radius:10px ;
-}
 .dark{
-    border-top-right-radius:10px ;
-    border-bottom-right-radius:10px ;
+    border-radius: 10px;
+}
+.dark p{
+    font-size: 10px;
 }
 .QuestionsBox{
     display: flex;
